attempted fix for horizontal on mobile

--- a/clock/style.css
+++ b/clock/style.css
@@ -7,8 +7,8 @@
 
 #myCanvas, #outline {
   position: absolute;
-  height: min(90vw, 90vh);
-  width: min(90vw, 90vh);
+  height: min(85vw, 90vh);
+  width: min(85vw, 90vh);
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
